--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 /* Container */
 .container {
   display: grid;
-  gap: 2px;
+  gap: 1px;
 }
 
 /* Header */
@@ -26,7 +26,7 @@ body {
   grid-template-areas:
     'hero hero feature-1'
     'hero hero feature-2';
-  gap: 3px;
+  gap: 1px;
 }
 
 .hero {
@@ -36,10 +36,12 @@ body {
   background-size: cover;
   background-position: center;
   padding-left: 20px;
+  border: 1px solid rgb(223, 223, 223);
 }
 
 .hero>* {
   display: none;
+  color: #333;
 }
 
 .features {
@@ -55,19 +57,25 @@ body {
   grid-area: feature-1;
   background-image: url(img/feature-1.png);
   background-size: cover;
+  border: 1px solid rgb(223, 223, 223);
 }
 
 .feature-2 {
   grid-area: feature-2;
   background-image: url(img/feature-2.png);
   background-size: cover;
+  border: 1px solid rgb(223, 223, 223);
 }
 
-.features .price {
+.features .banner {
   font-size: 3em;
   font-weight: 400;
 }
 
+.features .item {
+  font-size: 1.5em;
+  font-weight: 400;
+}
 
 /* Navigation */
 .menu {
@@ -89,7 +97,6 @@ body {
   background: linear-gradient(90deg, khaki 40%, black 50%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-
 }
 
 .menu ul {
@@ -114,7 +121,6 @@ body {
 
 .menu a:hover {
   background-color: maroon;
-  transition: 400ms;
 }
 
 
@@ -129,7 +135,7 @@ body {
   background-color: white;
   padding: 3px;
   text-align: center;
-  border: 1px solid rgb(223,223,223);
+  border: 1px solid rgb(223, 223, 223);
 }
 
 .brand p {
@@ -157,6 +163,8 @@ body {
   font-size: 1.6em;
   font-weight: 400;
   border-radius: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 /* Goods */
@@ -167,10 +175,11 @@ body {
 }
 
 .good {
+  border-radius: 5px;
   background-color: #fff;
-  padding: 3px;
+  padding: 5px;
   text-align: center;
-  border: 1px solid rgb(223,223,223);
+  border: 1px solid rgb(223, 223, 223);
 }
 
 .good a {
@@ -194,7 +203,7 @@ body {
 }
 
 .link {
-  background-color: rgb(223,223,223);
+  background-color: rgb(223, 223, 223);
   color: #aaa;
   place-content: center;
 }
@@ -218,8 +227,9 @@ body {
 }
 
 .short {
+  border-radius: 5px;
   background-color: white;
-  border: 1px solid rgb(223,223,223);
+  border: 1px solid rgb(223, 223, 223);
   padding: 3px;
   text-align: center;
 }
