--- a/style.css
+++ b/style.css
@@ -179,9 +179,9 @@ body {
 .good {
   border-radius: 5px;
   background-color: #fff;
-  padding: 5px 5px 10px 5px;
   text-align: center;
   border: 1px solid rgb(223, 223, 223);
+  padding-bottom: 10px;
 }
 
 .good a {
@@ -202,6 +202,11 @@ body {
 
 .good:hover {
   border: 2px solid #aaa;
+}
+
+.good img {
+  border-radius: 3px 3px 0 0;
+
 }
 
 .link {
@@ -229,11 +234,11 @@ body {
 }
 
 .short {
-  border-radius: 5px;
   background-color: white;
   border: 1px solid rgb(223, 223, 223);
   text-align: center;
   box-sizing: border-box;
+  padding-top: 5px;
   padding-bottom: 15px;
 }
 
