--- a/style.css
+++ b/style.css
@@ -139,7 +139,6 @@ body {
   background-color: white;
   padding: 3px;
   text-align: center;
-  /* border: 1px solid rgb(223, 223, 223); */
 }
 
 .brand p {
@@ -187,7 +186,6 @@ body {
 
 .good a {
   text-decoration: none;
-  color: #aaa;
 }
 
 .good h4 {
@@ -231,11 +229,11 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 7px;
+  margin-bottom: 10%;
 }
 
 .short {
   background-color: white;
-  /* border: 1px solid rgb(223, 223, 223); */
   text-align: center;
   box-sizing: border-box;
   padding-top: 5px;
@@ -247,15 +245,18 @@ body {
   text-decoration: none;
 }
 
-.short p {
-  font-size: 0.8em;
-  color: rgb(235, 75, 45)
+.short h4 {
+  font-family: "Ubuntu Sans", Arial, Helvetica, sans-serif;
+  font-size: 0.7em;
+  font-weight: 600;
+  color: rgb(95, 100, 105);
+  text-transform: uppercase;
 }
 
-.short h4 {
-  font-size: 0.7em;
-  font-weight: 400;
-  color: #333;
+.short p {
+  font-size: 0.8em;
+  font-weight: 500;
+  color: rgb(235, 75, 45)
 }
 
 .short iframe {
@@ -305,49 +306,23 @@ body {
   /* Desktop */
   .desktop {
     display: grid;
-    grid-template-areas: 'left-1 left-2 mid right-1 right-2';
-    align-items: center;
-    gap: 5px;
+    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
     background-color: orangered;
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
-    height: 12%;
-    border-radius: 5px 5px 0 0;
+    height: 10%;
     box-sizing: border-box;
-    justify-content: space-around;
-
   }
+
+
 
   .icon {
-    text-align: center;
-    height: 60px;
-    width: 60px;
     border-radius: 50%;
-    background-color: #f5f5f5;
-    line-height: 50px;
-  }
-
-  .left-1 {
-    grid-area: left-1;
-  }
-
-  .left-2 {
-    grid-area: left-2;
-  }
-
-  .mid {
-    grid-area: mid;
-
-  }
-
-  .right-1 {
-    grid-area: right-1;
-  }
-
-  .right-1 {
-    grid-area: right-2;
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
   }
 
 }
