--- a/style.css
+++ b/style.css
@@ -322,5 +322,9 @@ body {
   .icon {
     border-radius: 50%;
     background-color: #fff;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
   }
 }
