--- a/style.css
+++ b/style.css
@@ -350,7 +350,8 @@ body {
     left: 0;
     right: 0;
     box-sizing: border-box;
-    padding: 10px 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
   }
 
   .icon {
