--- a/style.css
+++ b/style.css
@@ -16,32 +16,28 @@ body {
   /* font-family: "Roboto Flex", Arial, Helvetica, sans-serif; */
   /* font-family: "Poppins", Arial, Helvetica, sans-serif; */
   /* font-family: "Pacifico", cursive; */
-  margin: 2px;
 }
 
 
 /* Container */
 .container {
   display: grid;
-  /* gap: 1px; */
 }
 
 
 /* Navigation */
 .menu {
   display: grid;
-  grid-template-columns: 2fr 2fr;
+  grid-template-columns: 1fr 1.5fr;
   align-items: center;
-  /* background-image: url(img/title-section.png);
-  background-size: cover; */
-  background-color: rgb(205, 1, 25);
+  background-color: white;
   box-sizing: border-box;
+  padding: 5px 5px 5px 50px;
 }
 
 .menu .logo {
   font-size: 1.2em;
   font-weight: 400;
-  text-align: center;
 }
 
 .logo h1 {
@@ -49,39 +45,18 @@ body {
 }
 
 .logo .h {
-  color: yellow;
+  color: rgb(205, 1, 25);
 }
 
 .logo .s {
   color: #333;
-  text-shadow: 1px 1px 2px white;
 }
 
-.menu ul {
+.menu .menu-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  gap: 5px;
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
   list-style: none;
 }
-
-.menu a {
-  display: block;
-  font-family: "Ubuntu Sans", Arial, Helvetica, sans-serif;
-  font-weight: 500;
-  background-color: orangered;
-  border: 2px solid maroon;
-  color: white;
-  text-decoration: none;
-  text-align: center;
-  padding: 3px;
-  border-radius: 3px;
-}
-
-.menu a:hover {
-  background-color: maroon;
-  border: 2px solid maroon;
-}
-
 
 /* Header */
 .header {
@@ -98,21 +73,12 @@ body {
   background-image: url(img/hero.jpg);
   background-size: cover;
   background-position: center;
-  padding-left: 20px;
+  padding-left: 15px;
   border: 1px solid rgb(223, 223, 223);
 }
 
 .hero>* {
   display: none;
-}
-
-.hero .h {
-  color: yellow;
-}
-
-.hero .s {
-  text-shadow: 1px 1px 2px white;
-  color: #333;
 }
 
 .features {
@@ -174,21 +140,6 @@ body {
   border: 1px solid #aaa;
 }
 
-/* Title */
-.title-section {
-  display: grid;
-  grid-template-columns: 1fr;
-  color: rgb(205, 1, 25);
-  text-align: center;
-  padding: 5px;
-  font-family: "Ubuntu Sans", Arial, Helvetica, sans-serif;
-  text-transform: uppercase;
-  font-size: 1.5em;
-  font-weight: 800;
-  padding-top: 25px;
-  padding-bottom: 10px;
-}
-
 
 /* Goods */
 .goods {
@@ -201,7 +152,6 @@ body {
   border-radius: 0 0 5px 5px;
   background-color: #fff;
   text-align: center;
-  /* border: 1px solid rgb(223, 223, 223); */
   padding-bottom: 10px;
 }
 
@@ -210,19 +160,18 @@ body {
 }
 
 .good h4 {
-  /* font-family: "Ubuntu Sans", Arial, Helvetica, sans-serif; */
-
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-size: 0.7em;
   font-weight: 500;
   color: rgb(95, 100, 105);
-  /* text-transform: uppercase; */
 }
 
 .good p {
-  font-size: 0.8em;
-  font-weight: 500;
-  color: rgb(235, 75, 45)
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-size: 0.7em;
+  font-weight: 700;
+  color: rgb(235, 75, 45);
+  /* color: rgb(205, 1, 25); */
 }
 
 .good:hover {
@@ -236,14 +185,16 @@ body {
   place-content: center;
 }
 
+
 .link img {
   width: 100px;
 }
 
+
 .link h4 {
-  font-size: 1.2em;
-  font-weight: 700;
-  color: #333;
+  font-size: 1em;
+  font-weight: 500;
+  color: #aaa;
 }
 
 
@@ -269,11 +220,10 @@ body {
 }
 
 .short h4 {
-  font-family: "Ubuntu Sans", Arial, Helvetica, sans-serif;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-size: 0.7em;
   font-weight: 600;
   color: rgb(95, 100, 105);
-  text-transform: uppercase;
 }
 
 .short p {
@@ -286,26 +236,83 @@ body {
   min-height: 480px;
 }
 
-.short:hover {
-  border: 1px solid #aaa;
-  border-radius: 0 0 5px 5px;
+
+/* Title */
+.title-section {
+  display: grid;
+  grid-template-columns: 1fr;
+  color: darkred;
+  text-align: center;
+  padding: 5px;
+  font-family: "Ubuntu Sans", Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  font-weight: 800;
+  padding-top: 25px;
+  padding-bottom: 10px;
 }
 
+
+/* Desktop */
 .desktop {
   display: none;
 }
 
+/* Icon */
+.icon {
+  text-align: center;
+  box-sizing: border-box;
+  color: #aaa;
+}
+
+.icon-size-48 {
+  width: 48px;
+  height: 48px;
+}
+
+.icon-size-32 {
+  width: 32px;
+  height: 32px;
+}
+
+.icon-size-30 {
+  width: 30px;
+  height: 30px;
+}
+
+.icon:hover {
+  /* color: rgb(95, 100, 105); */
+  color: rgb(205, 1, 25);
+  cursor: pointer;
+}
+
+.icon p {
+  font-size: 0.6em;
+}
 
 /* Responsive Breakpoint */
-@media (max-width: 1024px) {
+@media (max-width: 1024px) {}
+
+@media (max-width: 768px) {
+
+  /* Navigation */
   .menu {
     display: none;
   }
 
+  /* Header */
   .hero>* {
     display: block;
     padding: 5px 13px;
-    margin-bottom: 10px;
+  }
+
+  .hero .h {
+    color: yellow;
+  }
+
+  .hero .s {
+    text-shadow: 1px 1px 2px white;
+    color: #333;
   }
 
   .hero .heading {
@@ -328,17 +335,6 @@ body {
     justify-content: center;
     align-items: start;
   }
-}
-
-@media (max-width: 768px) {}
-
-@media (max-width: 600px) {
-  .header {
-    grid-template-areas:
-      'hero'
-      'feature-1'
-      'feature-2';
-  }
 
   /* Desktop */
   .desktop {
@@ -352,20 +348,15 @@ body {
     box-sizing: border-box;
     padding: 5px 0;
   }
+}
 
-  .icon {
-    text-align: center;
-    box-sizing: border-box;
-    color: #aaa;
+@media (max-width: 600px) {
+
+  /*Header  */
+  .header {
+    grid-template-areas:
+      'hero'
+      'feature-1'
+      'feature-2';
   }
-
-  .desktop .icon-size {
-    width: 32px;
-    height: 32px;
-  }
-
-  .icon p {
-    font-size: 0.6em;
-  }
-
 }
