--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ body {
   background-color: white;
   padding: 3px;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .brand p {
@@ -298,9 +299,14 @@ dialog::backdrop {
 
 .modal {
   padding: 0.3rem;
-  top: 25%;
-  margin: 0 auto;
+  margin: auto;
 }
+
+.modal:focus {
+  border: none;
+  outline: 0;
+}
+
 
 /* Form */
 form {
@@ -308,12 +314,14 @@ form {
 }
 
 form input {
-   font-family: "Nunito Sans", Arial, Helvetica, sans-serif;
+  font-family: "Nunito Sans", Arial, Helvetica, sans-serif;
   font-size: medium;
   color: #333;
   width: 250px;
   border: none;
+  outline: 0;
 }
+
 
 /* Responsive Breakpoint */
 @media (max-width: 1024px) {}
