--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
 img {
@@ -11,11 +13,8 @@ body {
   background-color: #f5f5f5;
   font-size: 18px;
   font-family: "Oswald", Arial, Helvetica, sans-serif;
-  /* font-family: "Ubuntu Sans", Arial, Helvetica, sans-serif; */
-  /* font-family: "Nunito Sans", Arial, Helvetica, sans-serif; */
-  /* font-family: "Roboto Flex", Arial, Helvetica, sans-serif; */
-  /* font-family: "Poppins", Arial, Helvetica, sans-serif; */
-  /* font-family: "Pacifico", cursive; */
+  padding-top: 67px;
+  padding-bottom: 0;
 }
 
 
@@ -28,21 +27,18 @@ body {
 /* Navigation */
 .menu {
   display: grid;
-  grid-template-columns: 1fr 1.5fr;
-  align-items: center;
   background-color: white;
-  box-sizing: border-box;
+  grid-template-columns: 1fr 1.5fr;
   padding: 5px 5px 5px 50px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
 }
+
 
 .menu .logo {
   font-size: 1.2em;
   font-weight: 400;
 }
 
-.logo h1 {
-  font-family: "Pacifico", cursive;
-}
 
 .logo .h {
   color: rgb(205, 1, 25);
@@ -52,11 +48,13 @@ body {
   color: #333;
 }
 
-.menu .menu-list {
+.menu-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
   list-style: none;
 }
+
+
 
 /* Header */
 .header {
@@ -70,7 +68,7 @@ body {
 .hero {
   grid-area: hero;
   min-height: 300px;
-  background-image: url(img/hero.jpg);
+  background-image: url(../img/hero.jpg);
   background-size: cover;
   background-position: center;
   padding-left: 15px;
@@ -91,14 +89,14 @@ body {
 
 .feature-1 {
   grid-area: feature-1;
-  background-image: url(img/feature-1.png);
+  background-image: url(../img/feature-1.png);
   background-size: cover;
   border: 1px solid rgb(223, 223, 223);
 }
 
 .feature-2 {
   grid-area: feature-2;
-  background-image: url(img/feature-2.png);
+  background-image: url(../img/feature-2.png);
   background-size: cover;
   border: 1px solid rgb(223, 223, 223);
 }
@@ -125,7 +123,7 @@ body {
   background-color: white;
   padding: 3px;
   text-align: center;
-  box-sizing: border-box;
+
 }
 
 .brand p {
@@ -133,7 +131,6 @@ body {
 }
 
 .brand a {
-  text-decoration: none;
   color: #333;
 }
 
@@ -156,9 +153,6 @@ body {
   padding-bottom: 10px;
 }
 
-.good a {
-  text-decoration: none;
-}
 
 .good h4 {
   font-family: "Poppins", Arial, Helvetica, sans-serif;
@@ -203,20 +197,14 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 7px;
-  margin-bottom: 10%;
 }
 
 .short {
   background-color: white;
   text-align: center;
-  box-sizing: border-box;
   padding-top: 5px;
   padding-bottom: 15px;
   border-radius: 0 0 5px 5px;
-}
-
-.short a {
-  text-decoration: none;
 }
 
 .short h4 {
@@ -262,27 +250,12 @@ body {
 /* Icon */
 .icon {
   text-align: center;
-  box-sizing: border-box;
   color: #aaa;
 }
 
-.icon-size-48 {
-  width: 48px;
-  height: 48px;
-}
 
-.icon-size-32 {
-  width: 32px;
-  height: 32px;
-}
-
-.icon-size-30 {
-  width: 30px;
-  height: 30px;
-}
 
 .icon:hover {
-  /* color: rgb(95, 100, 105); */
   color: rgb(205, 1, 25);
   cursor: pointer;
 }
@@ -294,7 +267,7 @@ body {
 
 /* Modal */
 dialog::backdrop {
-  background-color: rgba(95, 100, 105, 0.5);
+  background-color: rgba(95, 100, 105, 0.6);
 }
 
 .modal {
@@ -322,13 +295,31 @@ form input {
   outline: 0;
 }
 
+/* Position */
+.fixed-top {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.fixed-down {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
 
 /* Responsive Breakpoint */
 @media (max-width: 1024px) {}
 
 @media (max-width: 768px) {
 
-  /* Navigation */
+  body {
+    padding-top: 0;
+    padding-bottom: 67px;
+  }
+
   .menu {
     display: none;
   }
@@ -339,27 +330,24 @@ form input {
     padding: 5px 13px;
   }
 
+  .hero .heading {
+    background-color: rgba(255, 255, 255, 0.5);
+    font-weight: 500;
+  }
+
   .hero .h {
-    color: yellow;
+    color: rgb(205, 1, 25);
   }
 
   .hero .s {
-    text-shadow: 1px 1px 2px white;
     color: #333;
-  }
-
-  .hero .heading {
-    background-color: rgb(205, 1, 25);
-    font-family: "Pacifico", cursive;
-    font-weight: 400;
   }
 
   .hero .sub-heading {
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
     color: #333;
     text-shadow: 1px 1px 2px white;
-    font-weight: 800;
-    font-size: 0.7em;
+    font-weight: 700;
+    font-size: 0.8em;
   }
 
   .hero {
@@ -372,16 +360,13 @@ form input {
   /* Desktop */
   .desktop {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-    background-color: #fff;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    box-sizing: border-box;
+    background-color: white;
     padding: 5px 0;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
   }
+
 }
+
 
 @media (max-width: 600px) {
 
