--- a/css/style.css
+++ b/css/style.css
@@ -333,20 +333,26 @@ form input {
 
   .hero .heading {
     background-color: rgba(255, 255, 255, 0.5);
-    font-weight: 500;
   }
 
   .hero .h {
+    font-size: 1.2em;
+    font-weight: 400;
     color: rgb(205, 1, 25);
   }
 
   .hero .s {
+    font-size: 1.2em;
+    font-weight: 400;
     color: #333;
   }
 
   .hero .sub-heading {
-    color: #333;
     text-shadow: 1px 1px 2px white;
+    color: #333;
+  }
+
+  .hero .p {
     font-weight: 700;
     font-size: 0.8em;
   }
