--- a/css/overlay.css
+++ b/css/overlay.css
@@ -1,3 +1,60 @@
+:root {
+
+  /**
+   * colors
+   */
+
+  --cadet-blue-crayola: hsl(220, 14%, 75%);
+  --dark-electric-blue: hsl(217, 9%, 45%);
+  --shamrock-green: hsl(146, 51%, 41%);
+  --sea-green_10: hsla(146, 75%, 30%, 0.1);
+  --eerie-black: hsl(218, 12%, 13%);
+  --ghost-white: hsl(230, 60%, 98%);
+  --sea-green: hsl(146, 75%, 30%);
+  --honeydew: hsl(146, 74%, 94%);
+  --white: hsl(0, 0%, 100%);
+  --black: hsl(0, 0%, 0%);
+
+  /**
+   * typography
+   */
+
+  --fs-1: 2.8rem;
+  --fs-2: 1.8rem;
+  --fs-3: 1.5rem;
+  --fs-4: 1.2rem;
+
+  --fw-500: 500;
+  --fw-700: 700;
+
+  /**
+   * box-shadow
+   */
+
+  --shadow-1: 0 2px 3px hsla(0, 0%, 0%, 0.2);
+  --shadow-2: 0 10px 30px -10px var(--sea-green);
+
+  /**
+   * border radius
+   */
+
+  --radius-circle: 50%;
+  --radius-15: 15px;
+  --radius-12: 12px;
+  --radius-10: 10px;
+  --radius-6: 6px;
+
+  /**
+   * transition
+   */
+
+  --transition-1: 0.25s ease;
+  --transition-2: 0.5s ease;
+  --cubic-out: cubic-bezier(0.33, 0.85, 0.4, 0.96);
+
+}
+
+
 /* OVERLAY */
 #overlay-produk {
   display: none;
@@ -67,13 +124,11 @@
   cursor: pointer;
   position: absolute;
   top: 40%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
+  transform: translateY(-50%);
+  padding: 12px;
+  background-color: white;
+  color: #333;
+  border-radius: 50%;
   user-select: none;
   -webkit-user-select: none;
 }
@@ -81,14 +136,8 @@
 /* Position the "next button" to the right */
 .next {
   right: 0;
-  border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
 
 /* Number text (1/3 etc) */
 .numbertext {
@@ -138,6 +187,108 @@
   padding: 10px;
   border-radius: 0 10px 10px 0;
 }
+
+.product-content .product-subtitle {
+  color: #aaa;
+  font-size: 0.8rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.product-content .product-title {
+  color: #333;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-block-end: 25px;
+}
+
+.product-content .product-text {
+  color: #333;
+  font-size: 0.9rem;
+  margin-block-end: 20px;
+}
+
+.product-content .wrapper {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-block-end: 30px;
+}
+
+.product-content .price {
+  color: var(--sea-green);
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+
+.product-content .badge {
+  background-color: var(--sea-green_10);
+  color: var(--sea-green);
+  font-size: 0.8rem;
+  font-weight: 600;
+  padding: 0 5px;
+  border-radius: var(--radius-6);
+}
+
+.counter-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--ghost-white);
+  border-radius: var(--radius-10);
+  margin-block-end: 15px;
+}
+
+.counter-wrapper .span {
+  color: var(--eerie-black);
+  font-weight: var(--fw-700);
+}
+
+.cart-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  background-color: var(--sea-green);
+  color: var(--white);
+  font-weight: var(--fw-500);
+  padding: 18px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @media (max-width: 768px) {
