--- a/css/overlay.css
+++ b/css/overlay.css
@@ -65,6 +65,7 @@
   bottom: 0;
   background-color: rgba(95, 100, 105, 0.9);
   z-index: 1;
+  overflow: auto;
 }
 
 
@@ -125,7 +126,10 @@
   position: absolute;
   top: 40%;
   transform: translateY(-50%);
-  padding: 12px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  margin: 0 5px;
   background-color: white;
   color: #333;
   border-radius: 50%;
@@ -200,7 +204,7 @@
   color: #333;
   font-size: 1.5rem;
   font-weight: 600;
-  margin-block-end: 25px;
+  margin-block-end: 15px;
 }
 
 .product-content .product-text {
@@ -258,39 +262,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media (max-width: 768px) {
   .overlay-content {
     display: grid;
@@ -302,9 +273,6 @@
 @media (max-width: 600px) {
 
 
-  #overlay-produk {
-    overflow: auto;
-  }
 
   .details {
     border-radius: 10px 10px 0 0;
