--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ body {
 .brands {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-  gap: 5px;
+  gap: 20px;
 }
 
 .brand {
@@ -302,6 +302,7 @@ form input {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 99;
 }
 
 .fixed-down {
@@ -309,6 +310,7 @@ form input {
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 99;
 }
 
 /* Responsive Breakpoint */
