--- a/css/style.css
+++ b/css/style.css
@@ -66,16 +66,13 @@ body {
   grid-template-areas:
     'hero hero feature-1'
     'hero hero feature-2';
-  position: relative;
 }
-
 
 .hero {
   grid-area: hero;
-  min-height: 300px;
   border: 1px solid rgb(223, 223, 223);
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(80px, 100px));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .hero-logo>* {
@@ -117,7 +114,7 @@ body {
 /* Brands */
 .brands {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(80px, 100px));
+  grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
 }
 
 .brand {
@@ -327,19 +324,11 @@ form input {
     z-index: 99;
   }
 
-  .hero-logo {
-    display: grid;
-    align-items: center;
- 
-  }
-
   .hero-logo .heading {
     background-color: rgba(255, 255, 255, 0.5);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    place-items: center;
+    display: flex;
+    place-items:center;
     gap: 7px;
-
   }
 
   .hero-logo .h {
