--- a/css/overlay.css
+++ b/css/overlay.css
@@ -1,59 +1,35 @@
-:root {
-
-  /**
-   * colors
-   */
-
-  --cadet-blue-crayola: hsl(220, 14%, 75%);
-  --dark-electric-blue: hsl(217, 9%, 45%);
-  --shamrock-green: hsl(146, 51%, 41%);
-  --sea-green_10: hsla(146, 75%, 30%, 0.1);
-  --eerie-black: hsl(218, 12%, 13%);
-  --ghost-white: hsl(230, 60%, 98%);
-  --sea-green: hsl(146, 75%, 30%);
-  --honeydew: hsl(146, 74%, 94%);
-  --white: hsl(0, 0%, 100%);
-  --black: hsl(0, 0%, 0%);
-
-  /**
-   * typography
-   */
-
-  --fs-1: 2.8rem;
-  --fs-2: 1.8rem;
-  --fs-3: 1.5rem;
-  --fs-4: 1.2rem;
-
-  --fw-500: 500;
-  --fw-700: 700;
-
-  /**
-   * box-shadow
-   */
-
-  --shadow-1: 0 2px 3px hsla(0, 0%, 0%, 0.2);
-  --shadow-2: 0 10px 30px -10px var(--sea-green);
-
-  /**
-   * border radius
-   */
-
-  --radius-circle: 50%;
-  --radius-15: 15px;
-  --radius-12: 12px;
-  --radius-10: 10px;
-  --radius-6: 6px;
-
-  /**
-   * transition
-   */
-
-  --transition-1: 0.25s ease;
-  --transition-2: 0.5s ease;
-  --cubic-out: cubic-bezier(0.33, 0.85, 0.4, 0.96);
-
+/* SWIPER */
+.swiper {
+  width: 100%;
+  margin: auto;
 }
 
+.swiper-slide {
+  background-size: cover;
+  background-position: center;
+}
+
+.swiper-slide img {
+  display: block;
+  object-fit: cover;
+}
+
+.mySwiperThumbs {
+  margin: auto;
+}
+
+.mySwiperThumbs {
+  box-sizing: border-box;
+  padding: 1px 0;
+}
+
+.mySwiperThumbs .swiper-slide {
+  opacity: 0.4;
+}
+
+.mySwiperThumbs .swiper-slide-thumb-active {
+  opacity: 1;
+}
 
 /* OVERLAY */
 #overlay-produk {
@@ -75,7 +51,6 @@
   right: 5px;
   color: white;
   cursor: pointer;
-  /* transition: 0.1s; */
 }
 
 .overlay .close:hover,
@@ -86,7 +61,7 @@
 .overlay-content {
   display: grid;
   grid-template-areas: 'details product-content';
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 1.8fr;
   padding: 45px 20px 20px 20px;
 }
 
@@ -95,92 +70,7 @@
 .details {
   grid-area: details;
   background-color: white;
-  padding: 10px;
   border-radius: 10px 0 0 10px;
-}
-
-.mySlides img {
-  vertical-align: middle;
-  border-radius: 10px;
-}
-
-/* Position the image container (needed to position the left and right arrows) */
-.container-detail {
-  position: relative;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Add a pointer when hovering over the thumbnail images */
-.cursor {
-  cursor: pointer;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 40%;
-  transform: translateY(-50%);
-  width: 30px;
-  height: 30px;
-  text-align: center;
-  margin: 0 5px;
-  background-color: white;
-  color: #333;
-  border-radius: 50%;
-  user-select: none;
-  -webkit-user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-}
-
-
-/* Number text (1/3 etc) */
-.numbertext {
-  background-color: rgba(255, 255, 255, 0.8);
-  color: #333;
-  font-weight: 400;
-  padding: 0 15px;
-  border-radius: 0 10px 0 10px;
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-/* Container for image text */
-.caption-container {
-  text-align: center;
-  background-color: #222;
-  padding: 2px 16px;
-  color: white;
-}
-
-.row {
-  margin-top: 5px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30px, 1fr));
-  list-style: none;
-  gap: 3px;
-}
-
-
-/* Add a transparency effect for thumnbail images */
-.demo {
-  opacity: 0.5;
-}
-
-.active,
-.demo:hover {
-  opacity: 1;
-  border: 1px solid #aaa;
 }
 
 
@@ -220,59 +110,16 @@
   margin-block-end: 30px;
 }
 
-.product-content .price {
-  color: var(--sea-green);
-  font-size: 1.3rem;
-  font-weight: 600;
-}
-
-.product-content .badge {
-  background-color: var(--sea-green_10);
-  color: var(--sea-green);
-  font-size: 0.8rem;
-  font-weight: 600;
-  padding: 0 5px;
-  border-radius: var(--radius-6);
-}
-
-.counter-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: var(--ghost-white);
-  border-radius: var(--radius-10);
-  margin-block-end: 15px;
-}
-
-.counter-wrapper .span {
-  color: var(--eerie-black);
-  font-weight: var(--fw-700);
-}
-
-.cart-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 15px;
-  background-color: var(--sea-green);
-  color: var(--white);
-  font-weight: var(--fw-500);
-  padding: 18px;
-}
-
-
 
 @media (max-width: 768px) {
   .overlay-content {
     display: grid;
-    grid-template-columns: 1fr 1.2fr;
+    grid-template-columns: 1.2fr 1fr;
     padding: 45px 20px 20px 20px;
   }
 }
 
 @media (max-width: 600px) {
-
-
 
   .details {
     border-radius: 10px 10px 0 0;
